--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,26 @@
 asgiref==3.7.2
-backports.zoneinfo==0.2.1
-contourpy==1.1.1
-cycler==0.12.1
-Django==4.2.8
-fonttools==4.47.2
-importlib-resources==6.1.1
-kiwisolver==1.4.5
-matplotlib==3.7.4
-numpy==1.24.4
-packaging==23.2
-pandas==2.0.3
-pillow==10.2.0
-pyparsing==3.1.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1;python_version<"3.11"
+contourpy==1.1.0
+cycler==0.11.0
+dj-database-url==2.0.0
+Django==4.2.1
+fonttools==4.40.0
+gunicorn==20.1.0
+importlib-resources==5.12.0
+kiwisolver==1.4.4
+matplotlib==3.7.1
+numpy==1.24.3
+packaging==23.1
+pandas==2.0.2
+Pillow==9.5.0
+psycopg2-binary==2.9.6
+pyparsing==3.0.9
 python-dateutil==2.8.2
-pytz==2023.3.post1
+pytz==2023.3
 six==1.16.0
 sqlparse==0.4.4
-typing-extensions==4.9.0
-tzdata==2023.4
-zipp==3.17.0
+typing_extensions==4.6.2
+tzdata==2023.3
+whitenoise==6.5.0
+zipp==3.15.0
