Major UI/UX updates: - Glassmorphic styling for detail, search, login, and welcome pages - Added difficulty color coding (Easy=green, Intermediate=orange, Hard=red) - Improved chart theme (dark mode fonts, gold title, transparency) - Unified headers with Pacifico + glow - Updated requirements.txt and utils.py - Removed old auth login template, added base.html - User model/admin/view adjustments

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,20 @@
-asgiref==3.7.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
-backports.zoneinfo==0.2.1;python_version<"3.11"
-contourpy==1.1.0
-cycler==0.11.0
-dj-database-url==2.0.0
-Django==4.2.1
-fonttools==4.40.0
-gunicorn==20.1.0
-importlib-resources==5.12.0
-kiwisolver==1.4.4
-matplotlib==3.7.1
-numpy==1.24.3
-packaging==23.1
-pandas==2.0.2
-Pillow==9.5.0
-psycopg2-binary==2.9.6
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2023.3
-six==1.16.0
-sqlparse==0.4.4
-typing_extensions==4.6.2
-tzdata==2023.3
-whitenoise==6.5.0
-zipp==3.15.0
+asgiref>=3.8.1
+dj-database-url>=2.2.0
+Django>=5.1,<5.2
+fonttools>=4.54.0
+gunicorn>=21.2.0
+importlib-resources>=6.4.0
+matplotlib>=3.9.2
+numpy>=2.1.1
+packaging>=24.1
+pandas>=2.2.2
+Pillow>=10.4.0
+psycopg2-binary>=2.9.9
+pyparsing>=3.1.4
+python-dateutil>=2.9.0.post0
+six>=1.16.0
+sqlparse>=0.5.1
+typing_extensions>=4.12.2
+tzdata>=2024.1
+whitenoise>=6.6.0
+zipp>=3.20.1
