--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,33 @@
-# Text backup files
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Virtual environment
+venv/
+env/
+ENV/
+
+# Django stuff
+*.log
+*.pot
+*.pyc
+db.sqlite3
+media/
+
+# Backup files
 *.backup
 *settings.py
 
-# Database
-*.sqlite3
+# IDE/editor settings
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Node modules (if you ever add frontend packages)
+node_modules/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
